--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-trello",
+  "name": "e-taskify",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
