--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "unsplash-js": "^7.0.18",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
