--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
     "postcss": "8.4.31",
@@ -42,6 +43,7 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "prisma": "^5.6.0"
   }
 }
